--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 </head>
 <body>
     <h1>구름 풀스택 양성 과정 7회차 - 남소희</h1>
+    <h2>-----과제 리스트-----</h2>
     <button
         onclick="location.href='./01.netflix/index.html'">
         01. HTML/CSS를 이용해서 넷플릭스 사이트 만들기
