--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         02. 자바스크립트를 이용해서 Todo 앱 만들기
     </button>
     <button
-        onclick="location.href='./02.TodoApp/index.html'">
+        onclick="location.href='./03.GithubFinder/index.html'">
         03. 자바스크립트를 이용해서 github finder 앱 만들기
     </button>
 </body>
