--- a/index.html
+++ b/index.html
@@ -26,5 +26,9 @@
         onclick="location.href='./03.GithubFinder/index.html'">
         03. 자바스크립트를 이용해서 github finder 앱 만들기
     </button>
+    <button
+        onclick="location.href='./04.SpreadsheetApp/index.html'">
+        04. 자바스크립트를 이용해서 Spread Sheet 앱 만들기
+    </button>
 </body>
 </html>
