--- a/index.html
+++ b/index.html
@@ -30,5 +30,9 @@
         onclick="location.href='./04.SpreadsheetApp/index.html'">
         04. 자바스크립트를 이용해서 Spread Sheet 앱 만들기
     </button>
+    <button
+        onclick="location.href='./05.react_crud/public/index.html'">
+        05. 리액트를 이용해서 CRUD 앱 만들기
+    </button>
 </body>
 </html>
