--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         04. 자바스크립트를 이용해서 Spread Sheet 앱 만들기
     </button>
     <button
-        onclick="location.href='./05.react_crud/public/index.html'">
+        onclick="location.href='https://github.com/NS0H/goorm_mission/tree/master/05.react_crud'">
         05. 리액트를 이용해서 CRUD 앱 만들기
     </button>
 </body>
