--- a/index.html
+++ b/index.html
@@ -34,5 +34,9 @@
         onclick="location.href='https://github.com/NS0H/goorm_mission/tree/master/05.react_crud'">
         05. 리액트를 이용해서 CRUD 앱 만들기
     </button>
+    <button
+        onclick="location.href='https://github.com/NS0H/goorm_mission/tree/master/06.shopping'">
+        06. 리액트를 이용해서 쇼핑몰 앱 만들기
+    </button>
 </body>
 </html>
